<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    tools:context="com.example.android.androidquiz.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/question_one_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_one"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/question_one_answer_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_one_answer_one"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/question_one_answer_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_one_answer_two"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/question_one_answer_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_one_answer_three"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/question_two_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_two"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/question_two_answer_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_two_answer_one"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/question_two_answer_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_two_answer_two"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/question_two_answer_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_two_answer_three"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/question_three_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_three"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/question_three_answer_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_three_answer_one"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/question_three_answer_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_three_answer_two"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/question_three_answer_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_three_answer_three"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/question_four_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_four"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/question_four_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_four_answer_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question_four_answer_one"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question_four_answer_two"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question_four_answer_three"
                    android:textSize="14sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question_five_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_five"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/question_five_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question_five_answer_one"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/question_five_answer_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question_five_answer_two"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question_five_answer_three"
                    android:textSize="14sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question_six_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_six"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/question_six_answer_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_six_answer_one"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/question_six_answer_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_six_answer_two"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/question_six_answer_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/question_six_answer_three"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/question_seven_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_seven"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/question_seven_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_seven_answer_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question_seven_answer_one"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question_seven_answer_two"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question_seven_answer_three"
                    android:textSize="14sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question_eight_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/question_eight"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/question_eight_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question_eight_answer_one"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question_eight_answer_two"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/question_eight_answer_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question_eight_answer_three"
                    android:textSize="14sp" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/score_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorSecondary"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:onClick="scoreButton"
            android:text="@string/score"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:onClick="resetButton"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/score_text"
        android:textColor="#000000"
        android:textSize="24sp"
        android:visibility="visible" />

</RelativeLayout>